
Mon Sep 24 16:15:47 CEST 2007 Paolo Molaro <lupus@ximian.com>

	* include/private/gc_priv.h: increase the default MAX_HEAP_SECTS
	value (bug#314759, bug#324318).

Tue Sep 11 16:22:28 CEST 2007 Paolo Molaro <lupus@ximian.com>

	* pthread_support.c: export GC_thread_tls.

2007-08-22  Martin Baulig  <martin@ximian.com>

	* pthread_stop_world.c
	(GC_mono_debugger_add_all_threads): Removed.
	(GC_mono_debugger_get_stack_ptr): New public function.

Wed Jul 4 17:46:19 CEST 2007 Paolo Molaro <lupus@ximian.com>

	* darwin_stop_world.c: use a larger array for GC_mach_threads
	(it'll need to be enlarged dynamically, but it's with the world
	stopped, bug #81974).

2007-05-09  Jonathan Chambers  <joncham@gmail.com>

	* win32_threads.c: If SuspendThread fails, don't abort. Instead
	remove thread from GC, as this only seems to happen when thread is
	terminating.

2007-03-29  Zoltan Varga  <vargaz@gmail.com>

	* autogen.sh: Applied patch from Priit Laes <amd@store20.com>. Fix the running
	of libtoolize.

	* ltmain.sh config.sub config.guess: Removed, libtoolize creates them now.

2007-03-13  Jonathan Chambers  <joncham@gmail.com>

	* include/gc.h: Fix _WIN64 typedefs.
	* libgc.vcproj: Fix Release target and begin Win64 port.
	
2007-02-01  Geoff Norton  <gnorton@customerdna.com>

	* include/private/gc_pthread_redirects.h:
	* include/private/gc_config_macros.h:
	* include/private/gc_priv.h:
	* configure.in:
	* pthread_support.c
	* specific.c:  Support for NetBSD-CURRENT.  Loosely based on NetBSD
	pkgsrc patch.

2006-12-22  Robert Jordan  <robertj@gmx.net>

	* include/private/gcconfig.h, os_dep.c:
	Add FreeBSD/amd64 support. Based on a FreeBSD Port Collection patch.
	r=Paolo.

2006-11-19  Allan Hsu <allan@counterpop.net>

	* libgc/darwin_stop_world.c, libgc/include/private/gc_priv.h,
	libgc/os_dep.c: Fixes to make the GC work on OSX/Intel with XCode
	2.4 (10.4u SDK and newer).

	This code should work with older versions of the SDK as well. 
